# baize

./: .gitignore  CLAUDE.md  LICENSE  README.md  baize.md  baize.yaml.example  pyproject.toml
baize/: __init__.py  __main__.py  banner.py  cli.py  config.py
baize/agents/: __init__.py  auditor.py  base.py  fix_agent.py  knowledge_agent.py  orchestrator.py  processor_agent.py  query_agent.py
baize/core/: __init__.py  analyzer.py  build_plan.py  builder.py  custom_flow_analyzer.py  dataflow.py  db_cache.py  delta.py  fix_suggester.py  query_generator.py  result_processor.py  scheduler.py  source_sink.py  triage.py
baize/kb/: __init__.py  ql_context.py  retriever.py  vector_store.py
baize/mcp_server/: __init__.py  server.py
baize/models/: __init__.py  audit_result.py  dataflow.py  finding.py  report.py
baize/queries/: __init__.py  generator.py
baize/reports/: __init__.py  html_report.py  json_report.py  markdown_report.py  sarif_report.py
baize/utils/: __init__.py  codeql.py  llm.py  logger.py  progress.py
tests/: conftest.py
tests/unit/: test_agents.py  test_config.py  test_queries.py  test_result_processor.py  test_scheduler.py  test_source_sink.py
